2011-02-21  Nico Weber  <thakis@chromium.org>

Reviewed by Adam Barth.

        ImageDocument::imageChanged() confuses clang's -Woverride-virtual
        https://bugs.webkit.org/show_bug.cgi?id=54924

        Rename ImageDocument::imageChanged() to imageUpdated() to make clear
        that it's not an override of CachedResourceClient::imageChanged().

        * html/ImageDocument.cpp:
        (WebCore::ImageDocumentParser::appendBytes):
        (WebCore::ImageDocumentParser::finish):
        (WebCore::ImageDocument::imageUpdated):
        * html/ImageDocument.h:

Canonical link: https://commits.webkit.org/69211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79288 268f45cc-cd09-0410-ab3c-d52691b4dbfc